refactor: dto, error 처리 구조 responsemap을 활용하도록 변경  #7